--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "db:migrate:create": "./node_modules/.bin/rethink-migrate create -r db",
     "db:migrate:down": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r db down",
     "db:migrate:up": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r db up",
+    "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate:up",
     "icons:fetch": "mkdir -p dist && curl -s https://brand.learnersguild.org/icontags > dist/icons-metadata.json",
     "import:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importProjects.js",
     "lint": "./node_modules/.bin/xo",
