--- a/db/data/survey-response-instructions.yaml
+++ b/db/data/survey-response-instructions.yaml
@@ -12,11 +12,11 @@ likert7Agreement: |
   Respond with an integer between 0 and 7.
 
   Response options:
-  - `1` : strongly disagree
-  - `2` : disagree
-  - `3` : somewhat disagree
-  - `4` : neither agree nor disagree
-  - `5` : somewhat agree
-  - `6` : agree
-  - `7` : strongly agree
+  - `1` : strongly disagree (0%)
+  - `2` : disagree (28%)
+  - `3` : somewhat disagree (43%)
+  - `4` : neither agree nor disagree (50%)
+  - `5` : somewhat agree (71%)
+  - `6` : agree (86%)
+  - `7` : strongly agree (100%)
   - `0` : don't know (N/A)
