--- a/package.json
+++ b/package.json
@@ -173,7 +173,9 @@
     "pre-commit": "^1.1.3",
     "react-addons-test-utils": "^15.4.1",
     "react-transform-hmr": "^1.0.4",
-    "xo": "^0.17.1"
+    "xo": "^0.17.1",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0"
   },
   "engines": {
     "node": "5.6.x",
