--- a/package.json
+++ b/package.json
@@ -121,9 +121,9 @@
     "postcss-modules-values": "^1.2.2",
     "raven": "^0.10.0",
     "raven-js": "^2.1.1",
-    "react": "^15.4.1",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
@@ -171,11 +171,11 @@
     "nock": "^8.0.0",
     "nyc": "^7.1.0",
     "pre-commit": "^1.1.3",
-    "react-addons-test-utils": "^15.4.1",
+    "react-addons-test-utils": "^15.4.2",
     "react-transform-hmr": "^1.0.4",
-    "xo": "^0.17.1",
     "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "xo": "^0.17.1"
   },
   "engines": {
     "node": "5.6.x",
