helper script to print levels (for validation)

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint": "./node_modules/.bin/xo",
     "postinstall": "npm run build",
     "preview:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/previewProjects",
+    "print:levels": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printLevels",
     "print:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printProjects",
     "print:stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printStats",
     "print:survey": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printSurveyQuestions",
