--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": ["es2015", "stage-2", "react"],
   "plugins": [
-    ["add-module-exports"],
+    "add-module-exports",
   ],
   "env": {
     "test": {
